--- a/action.yaml
+++ b/action.yaml
@@ -5,3 +5,9 @@ inputs:
   app_yaml_path:
     required: false
     default: "./test-app.yaml"
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
+branding:
+  icon: 'cloud'
+  color: 'orange'
