--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: perl -pi -e 's/_MONGO_CONNECTION_STRING_/$ENV{MONGO_CONNECTION_STRING}/' app.yaml
       - uses: '73h/gae-app-yaml-replace-env-variables@main'
         with:
-          app_yaml_path: './test-app.yaml'
+          app_yaml_path: 'test-app.yaml'
