--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: '73h/gae-app-yaml-replace-env-variables@main'
+      - uses: '73h/gae-app-yaml-replace-env-variables@313d3b096e36d1993f3af8a5d2618dda2ea87b84'
         with:
           app_yaml_path: 'test-app.yaml'
