--- a/action.yaml
+++ b/action.yaml
@@ -4,6 +4,12 @@ author: "Heiko Schmidt"
 branding:
   icon: "cloud"
   color: "orange"
+inputs:
+  app_yaml_path:
+    required: false
+    default: "test-app.yaml"
 runs:
   using: "docker"
   image: "Dockerfile"
+  args:
+    - ${{ inputs.app_yaml_path }}
