--- a/action.yaml
+++ b/action.yaml
@@ -5,7 +5,7 @@ branding:
   icon: "cloud"
   color: "orange"
 inputs:
-  app-yaml-path:
+  test:
     description: "path to app.yaml file"
     required: false
     default: "app.yaml"
@@ -13,4 +13,4 @@ runs:
   using: "docker"
   image: "Dockerfile"
   args:
-    - ${{ inputs.app-yaml-path }}
+    - ${{ inputs.test }}
