--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: 73h/gae-app-yaml-replace-env-variables@main
         with:
-          test: "foo"
+          app-yaml-path: "test-app.yaml"
