replace quotation marks from replacement - facepalm

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,8 +9,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: 73h/gae-app-yaml-replace-env-variables@main
         env:
-          VAR_ONE: "VAR_ONE_REPLACE"
-          VAR_TWO: "VAR_TWO_REPLACE"
-          ANOTHER_VAR: "ANOTHER_VAR_REPLACE"
+          VAR_ONE: "VAR ONE REPLACE"
+          VAR_TWO: "VAR TWO REPLACE"
+          ANOTHER_VAR: "ANOTHER VAR REPLACE xxx"
         with:
           app_yaml_path: "test-app.yaml"
